<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cn.mijack.meme.ui.AccountActivity"
    tools:showIn="@layout/activity_account">


    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_with_your_account"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/userName"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/info"
        app:passwordToggleDrawable="@drawable/visibility_selector"
        app:passwordToggleEnabled="false"
        app:passwordToggleTint="@color/visibility_selector">

        <android.support.design.widget.TextInputEditText
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/email"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/userNameLayout"
        app:passwordToggleDrawable="@drawable/visibility_selector"
        app:passwordToggleEnabled="false"
        app:passwordToggleTint="@color/visibility_selector">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/password"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:passwordToggleDrawable="@drawable/visibility_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/visibility_selector">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/otherChoice"
        style="@style/AppTheme.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="4dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="4dp"
        android:text="@string/create_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

    <Button
        android:id="@+id/nextAction"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="4dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="4dp"
        android:text="@string/login"
        android:theme="@style/AppTheme.Button.Colored"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout" />
</android.support.constraint.ConstraintLayout>
